Release Notes for the event package
-----------------------------------
event-R3-2-2-br_generaltime-2-5: (KHKIM)
        * add new diagnostic to measure the abolute time (interrupt delay)
          for the fiducial processing and the data buffer handling
        * fix confliction in evrEventAll.substitution file
          - EVG delay for event number 163, 164 were not matched with the mpgEventAll in the EVG application
          - Add new event (event number 163) for the A-line kicker

event-R3-2-2-br_generaltime-2-4: (KHKIM)
        * update README file
        * fix configure/RELEASE file: EPICS_MODULES=$(MODULES_SITE_TOP)
        * explicitly describe the target platforms
        * include linuxRT as a target platform
          configure/CONFIG_SITE
           CROSS_COMPILER_TARGET_ARCHS = RTEMS-beatnik  RTEMS-uC5282 linuxRT-x86
        * fix linux ISR handling issues to avoid missing interrupts
          - fix interrupt ACK
          - re-organize the task level handler
          This change should affect on the linux and linuxRT targets.
        * fix the fidcuial processing diagnostics for the intel x86 platform
        * put more diagnostics for the linux-x86 and x86 base linuxRT platform
          - to measure the evrTask delay due to the epicsEventSignal(semaphore)
        * switch the signal handling mechanism from ansynchronous way to synchronous way
        * re-write the double buffer algorithm for the data buffer handling (evrMessage*)
          

event-R3-2-2-br_generaltime-2-3: (KHKIM)
        * put a variable into RELEASE_SITE file to recognize the beam program
          need to put the following into RELEASE_SITE after did eco
          SITE_FACILITY = [LCLS | FACET | XTA]

        * change info field to use info_settings.req 

event-R3-2-2-br_generaltime-2-2: (KHKIM) 04-18-2012
        * bug fixing in linux driver
        * add FACET events: ACC STDBY
        * add up more information into README
