@@ -1,5 +1,9 @@
 Release Notes for the event package
 -----------------------------------
+event-R3-2-2-br_generaltime-2-6: (KHKIM)
+        * remove MUTEX in the ErGetTicsk to prevent locking 
+        * change the double buffer algorithm to prevent the timeslot offset issue
+
 event-R3-2-2-br_generaltime-2-5: (KHKIM)
         * add new diagnostic to measure the abolute time (interrupt delay)
           for the fiducial processing and the data buffer handling
